[gd_scene load_steps=5 format=3 uid="uid://cj7v1r6xwgcd4"]

[ext_resource type="Script" path="res://scenes/capturable_base.gd" id="1_mee0a"]
[ext_resource type="Texture2D" uid="uid://co0ivafep016u" path="res://assets/top_down_shooter/PNG/Woman Green/Tiles/tile_359.png" id="2_84brw"]
[ext_resource type="PackedScene" uid="uid://iesf8n20ul1b" path="res://scenes/actor/component/team.tscn" id="3_lll4i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p427t"]
radius = 158.079

[node name="CapturableBase" type="Area2D"]
position = Vector2(571, 338)
script = ExtResource("1_mee0a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p427t")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_84brw")

[node name="Team" parent="." instance=ExtResource("3_lll4i")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -83.0
offset_top = -95.0
offset_right = 85.0
offset_bottom = -41.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "CapturableBase"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
value = 50.0

[node name="CapturedInfo" type="RichTextLabel" parent="."]
visible = false
offset_left = -122.0
offset_top = 39.0
offset_right = 123.0
offset_bottom = 71.0
bbcode_enabled = true
text = "[center]Captured by [color=red]ENEMY team[/color]!!![/center]"

[node name="CapturedInfoTimer" type="Timer" parent="."]
one_shot = true

[node name="OutScreenNotifier" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="CapturedInfoTimer" to="." method="_on_captured_info_timer_timeout"]
[connection signal="screen_entered" from="OutScreenNotifier" to="." method="_on_out_screen_notifier_screen_entered"]
[connection signal="screen_exited" from="OutScreenNotifier" to="." method="_on_out_screen_notifier_screen_exited"]
